# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt
resources/shader/: shader.fs  shader.vs
test/: CMakeLists.txt  main.cpp
test/src/: shader.cpp  shader.h  stb_image.h
